# openDAQ

./: .clang-format  .editorconfig  .gitattributes  .gitignore  BUILD.md  CMake-Options.md  CMakeBasePresets.json  CMakeLists.txt  CMakePresets.json  CMakeUnstablePresets.json  CMakeVendorPresets.json  README.md  antora-playbook-dev.yml  antora-playbook.yml  antora-specs-playbook-dev.yml  antora-specs-playbook.yml  mypatch.patch  opendaq_version  opendaq_version_bump.py  patch_multireader.diff  ser_imp_design_doc.md  serialize.py  serialized_config_initial.json  serialized_open.py  update_doxygen.py
app/: CMakeLists.txt
app/audio_application/: CMakeLists.txt
app/audio_application/src/: CMakeLists.txt  main.cpp  utils.cpp
app/example_apps/: CMakeLists.txt
app/example_apps/bb_ref_modules_example/: CMakeLists.txt  ref_modules_example.cpp
app/test_app/: CMakeLists.txt
app/test_app/src/: CMakeLists.txt  main.cpp
bindings/c/: CMakeLists.txt  README.md  run_rtgen.sh
bindings/c/include/: base_object.h  boolean.h  ccommon.h  complex_number.h  copendaq.h  copendaq_private.h  dictobject.h  float1.h  integer.h  integer1.h  iterable.h  iterator.h  list.h  listobject.h  number.h  number1.h  ratio.h  str.h  stringobject.h
bindings/c/src/: base_object.cpp  boolean.cpp  complex_number.cpp  dictobject.cpp  float1.cpp  integer.cpp  integer1.cpp  iterable.cpp  iterator.cpp  list.cpp  listobject.cpp  number.cpp  number1.cpp  ratio.cpp  str.cpp  stringobject.cpp
bindings/c/test_app/: CMakeLists.txt  test_app.c
bindings/c/tests/: CMakeLists.txt  test_app.cpp  test_ccoretypes.cpp
bindings/dotnet/: CMakeLists.txt
bindings/dotnet/deployment/: makeNuGetRelease.ps1
bindings/dotnet/openDAQ.Net/: .editorconfig  .gitignore  Directory.Build.props  README.md  Thoughts-about-CSharp-Bindings.txt  openDAQ.Net.sln  openDAQ_Net-RTGen.sln
bindings/python/: CMakeLists.txt  README.md  run_rtgen.sh
cmake/: CMakeLists.txt  CodeCoverage.cmake  CodeCoverageGcc.cmake  CodeCoverageMsvc.cmake  DaqComponents.cmake  DaqInternal.cmake  DaqUtils.cmake  DeprecatedCommands.cmake  Extras.cmake  FindFilesystem.cmake  FindGitInfo.cmake  Modern.cmake  Packing.cmake  RTGen.cmake  Resources.cmake  openDAQConfig.cmake.in  openDAQLogging.cmake  openDAQModuleFetchUtils.cmake  openDAQUtils.cmake  opendaq_dependency.cmake  patch.cmake  test.cpp
cmake/version/: version.h.in  version.rc.in
core/coretypes/: CMakeLists.txt
core/opendaq/: CMakeLists.txt
docs/: CMakeLists.txt  version_injector.py
docs/Antora/: .asciidoctorconfig  README.md  antora.yml
docs/Antora-specs/: .asciidoctorconfig  README.md  antora.yml
docs/Doxygen/: Doxyfile.in  DoxygenLayout.xml  header.html
docs/tests/: CMakeLists.txt  docs_test_helpers.h  test_app.cpp  test_architecture.cpp  test_components.cpp  test_config_provider.cpp  test_devices.cpp  test_examples.cpp  test_get_last_value.cpp  test_howto.cpp  test_howto_access_control.cpp  test_howto_configure_instance.cpp  test_modules.cpp  test_pointers.cpp  test_property_system.cpp  test_quick_start.cpp  test_signals.cpp  test_streaming_config.cpp
examples/: CMakeLists.txt
examples/applications/: CMakeLists.txt
examples/c/: .gitignore  application_tutorial.c
examples/cpp/: CMakeLists.txt
examples/modules/: CMakeLists.txt
examples/python/: connection_view.py  csv_writer.py  daq_utils.py  enable_device_monitoring.py  generate_connection_view_image.py  gui_demo.py  ip_modification.py  plot_signal_overtime.py  read_and_write_wav_files.py  run_all_examples.py  show_device_status.py  signal_graphed_overtime.py
external_modules/: CMakeLists.txt
external_modules/patches/: 0001-Remove-global-FMT_HEADER_ONLY-definition.patch
modules/: CMakeLists.txt
modules/audio_device_module/: CMakeLists.txt
modules/basic_csv_recorder_module/: CMakeLists.txt
modules/basic_recorder_module/: CMakeLists.txt
modules/empty_module/: CMakeLists.txt
modules/file_writer_module/: CMakeLists.txt
modules/idds_client_module/: CMakeLists.txt
modules/idds_server_module/: CMakeLists.txt
modules/licensing_module/: CMakeLists.txt
modules/native_streaming_client_module/: CMakeLists.txt
modules/native_streaming_server_module/: CMakeLists.txt
modules/new_websocket_streaming_server_module/: CMakeLists.txt
modules/newer_websocket_streaming_server_module/: CMakeLists.txt
modules/opcua_client_module/: CMakeLists.txt
modules/opcua_modules/: CMakeLists.txt  Fetch.cmake
modules/opcua_server_module/: CMakeLists.txt
modules/parquet_recorder_module/: CMakeLists.txt
modules/ref_device_module/: CMakeLists.txt
modules/ref_fb_module/: CMakeLists.txt
modules/tests/: CMakeLists.txt
modules/websocket_streaming_client_module/: CMakeLists.txt
modules/websocket_streaming_modules/: CMakeLists.txt
modules/websocket_streaming_server_module/: CMakeLists.txt
regression/: CMakeLists.txt  CMakeListsTop.txt  device.cpp  regression_test_channel.cpp  regression_test_component.cpp  regression_test_device.cpp  regression_test_fb.cpp  regression_test_folder.cpp  regression_test_input_port.cpp  regression_test_property.cpp  regression_test_signal.cpp
regression/simulator/: CMakeLists.txt  regression_simulator.cpp
regression/tests/: CMakeLists.txt  get_protocol.h  reg_p_test_channel.cpp  reg_p_test_component.cpp  reg_p_test_device.cpp  reg_p_test_fb.cpp  reg_p_test_folder.cpp  reg_p_test_input_port.cpp  reg_p_test_property.cpp  reg_p_test_serialization.cpp  reg_p_test_signal.cpp  regression_test_channel.cpp  regression_test_component.cpp  regression_test_device.cpp  regression_test_fb.cpp  regression_test_folder.cpp  regression_test_input_port.cpp  regression_test_property.cpp  regression_test_signal.cpp  setup_regression.h
shared/: CMakeLists.txt
shared/libraries/: CMakeLists.txt
simulator/: CMakeLists.txt  Vagrantfile  configurator.py  native_streaming.service  netplan_manager.py  opcuatms.service  opendaq-config.json  output  quick_start_simulator  serial_number_setter.py  simulator.service
simulator/simulator_app/: CMakeLists.txt
tests/integration/: CMakeLists.txt
(+4170 files in other folders)
